--- a/plugins/group_file/Makefile.in
+++ b/plugins/group_file/Makefile.in
@@ -139,7 +139,7 @@ Makefile: $(srcdir)/Makefile.in
 	$(CPP) $(CPPFLAGS) $< > $@
 
 .i.plog:
-	ifile=$<; rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $${ifile%i}c --i-file $< --output-file $@
+	ifile=$<; rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $${ifile%i}c --i-file $< --output-file $@
 
 $(shlib_map): $(shlib_exp)
 	@$(AWK) 'BEGIN { print "{\n\tglobal:" } { print "\t\t"$$0";" } END { print "\tlocal:\n\t\t*;\n};" }' $(shlib_exp) > $@
@@ -222,7 +222,7 @@ getgrent.i: $(srcdir)/getgrent.c $(incdir)/compat/stdbool.h \
              $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/getgrent.c > $@
 getgrent.plog: getgrent.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/getgrent.c --i-file getgrent.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/getgrent.c --i-file getgrent.i --output-file $@
 group_file.lo: $(srcdir)/group_file.c $(incdir)/compat/stdbool.h \
                $(incdir)/sudo_compat.h $(incdir)/sudo_plugin.h \
                $(top_builddir)/config.h
@@ -232,4 +232,4 @@ group_file.i: $(srcdir)/group_file.c $(incdir)/compat/stdbool.h \
                $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/group_file.c > $@
 group_file.plog: group_file.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/group_file.c --i-file group_file.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/group_file.c --i-file group_file.i --output-file $@
