--- a/plugins/python/Makefile.in
+++ b/plugins/python/Makefile.in
@@ -161,7 +161,7 @@ Makefile: $(srcdir)/Makefile.in
 	$(CPP) $(CPPFLAGS) $< > $@
 
 .i.plog:
-	ifile=$<; rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $${ifile%i}c --i-file $< --output-file $@
+	ifile=$<; rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $${ifile%i}c --i-file $< --output-file $@
 
 $(shlib_map): $(shlib_exp)
 	@$(AWK) 'BEGIN { print "{\n\tglobal:" } { print "\t\t"$$0";" } END { print "\tlocal:\n\t\t*;\n};" }' $(shlib_exp) > $@
@@ -278,7 +278,7 @@ check_python_examples.i: $(srcdir)/regress/check_python_examples.c \
                          $(srcdir)/sudo_python_debug.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/regress/check_python_examples.c > $@
 check_python_examples.plog: check_python_examples.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/regress/check_python_examples.c --i-file check_python_examples.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/regress/check_python_examples.c --i-file check_python_examples.i --output-file $@
 iohelpers.o: $(srcdir)/regress/iohelpers.c $(incdir)/compat/stdbool.h \
              $(incdir)/sudo_compat.h $(incdir)/sudo_fatal.h \
              $(incdir)/sudo_plugin.h $(srcdir)/regress/iohelpers.h \
@@ -290,7 +290,7 @@ iohelpers.i: $(srcdir)/regress/iohelpers.c $(incdir)/compat/stdbool.h \
              $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/regress/iohelpers.c > $@
 iohelpers.plog: iohelpers.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/regress/iohelpers.c --i-file iohelpers.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/regress/iohelpers.c --i-file iohelpers.i --output-file $@
 pyhelpers.lo: $(srcdir)/pyhelpers.c $(incdir)/compat/stdbool.h \
               $(incdir)/sudo_compat.h $(incdir)/sudo_debug.h \
               $(incdir)/sudo_plugin.h $(incdir)/sudo_queue.h \
@@ -306,7 +306,7 @@ pyhelpers.i: $(srcdir)/pyhelpers.c $(incdir)/compat/stdbool.h \
               $(top_builddir)/pathnames.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/pyhelpers.c > $@
 pyhelpers.plog: pyhelpers.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/pyhelpers.c --i-file pyhelpers.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/pyhelpers.c --i-file pyhelpers.i --output-file $@
 pyhelpers.o: $(srcdir)/pyhelpers.c $(incdir)/compat/stdbool.h \
              $(incdir)/sudo_compat.h $(incdir)/sudo_debug.h \
              $(incdir)/sudo_plugin.h $(incdir)/sudo_queue.h \
@@ -329,7 +329,7 @@ python_baseplugin.i: $(srcdir)/python_baseplugin.c $(incdir)/compat/stdbool.h \
                       $(srcdir)/sudo_python_module.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_baseplugin.c > $@
 python_baseplugin.plog: python_baseplugin.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_baseplugin.c --i-file python_baseplugin.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_baseplugin.c --i-file python_baseplugin.i --output-file $@
 python_convmessage.lo: $(srcdir)/python_convmessage.c \
                        $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
                        $(incdir)/sudo_debug.h $(incdir)/sudo_plugin.h \
@@ -347,7 +347,7 @@ python_convmessage.i: $(srcdir)/python_convmessage.c \
                        $(srcdir)/sudo_python_module.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_convmessage.c > $@
 python_convmessage.plog: python_convmessage.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_convmessage.c --i-file python_convmessage.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_convmessage.c --i-file python_convmessage.i --output-file $@
 python_loghandler.lo: $(srcdir)/python_loghandler.c $(incdir)/compat/stdbool.h \
                       $(incdir)/sudo_compat.h $(incdir)/sudo_debug.h \
                       $(incdir)/sudo_plugin.h $(incdir)/sudo_queue.h \
@@ -363,7 +363,7 @@ python_loghandler.i: $(srcdir)/python_loghandler.c $(incdir)/compat/stdbool.h \
                       $(srcdir)/sudo_python_module.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_loghandler.c > $@
 python_loghandler.plog: python_loghandler.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_loghandler.c --i-file python_loghandler.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_loghandler.c --i-file python_loghandler.i --output-file $@
 python_plugin_approval.lo: $(srcdir)/python_plugin_approval.c \
                            $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
                            $(incdir)/sudo_debug.h $(incdir)/sudo_plugin.h \
@@ -385,7 +385,7 @@ python_plugin_approval.i: $(srcdir)/python_plugin_approval.c \
                            $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_plugin_approval.c > $@
 python_plugin_approval.plog: python_plugin_approval.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_plugin_approval.c --i-file python_plugin_approval.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_plugin_approval.c --i-file python_plugin_approval.i --output-file $@
 python_plugin_audit.lo: $(srcdir)/python_plugin_audit.c \
                         $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
                         $(incdir)/sudo_debug.h $(incdir)/sudo_plugin.h \
@@ -405,7 +405,7 @@ python_plugin_audit.i: $(srcdir)/python_plugin_audit.c \
                         $(srcdir)/sudo_python_debug.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_plugin_audit.c > $@
 python_plugin_audit.plog: python_plugin_audit.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_plugin_audit.c --i-file python_plugin_audit.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_plugin_audit.c --i-file python_plugin_audit.i --output-file $@
 python_plugin_common.lo: $(srcdir)/python_plugin_common.c \
                          $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
                          $(incdir)/sudo_conf.h $(incdir)/sudo_debug.h \
@@ -427,7 +427,7 @@ python_plugin_common.i: $(srcdir)/python_plugin_common.c \
                          $(srcdir)/sudo_python_module.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_plugin_common.c > $@
 python_plugin_common.plog: python_plugin_common.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_plugin_common.c --i-file python_plugin_common.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_plugin_common.c --i-file python_plugin_common.i --output-file $@
 python_plugin_group.lo: $(srcdir)/python_plugin_group.c \
                         $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
                         $(incdir)/sudo_debug.h $(incdir)/sudo_plugin.h \
@@ -445,7 +445,7 @@ python_plugin_group.i: $(srcdir)/python_plugin_group.c \
                         $(srcdir)/sudo_python_debug.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_plugin_group.c > $@
 python_plugin_group.plog: python_plugin_group.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_plugin_group.c --i-file python_plugin_group.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_plugin_group.c --i-file python_plugin_group.i --output-file $@
 python_plugin_io.lo: $(srcdir)/python_plugin_io.c $(incdir)/compat/stdbool.h \
                      $(incdir)/sudo_compat.h $(incdir)/sudo_debug.h \
                      $(incdir)/sudo_plugin.h $(incdir)/sudo_queue.h \
@@ -463,7 +463,7 @@ python_plugin_io.i: $(srcdir)/python_plugin_io.c $(incdir)/compat/stdbool.h \
                      $(srcdir)/sudo_python_debug.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_plugin_io.c > $@
 python_plugin_io.plog: python_plugin_io.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_plugin_io.c --i-file python_plugin_io.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_plugin_io.c --i-file python_plugin_io.i --output-file $@
 python_plugin_policy.lo: $(srcdir)/python_plugin_policy.c \
                          $(incdir)/compat/stdbool.h $(incdir)/sudo_compat.h \
                          $(incdir)/sudo_debug.h $(incdir)/sudo_plugin.h \
@@ -481,7 +481,7 @@ python_plugin_policy.i: $(srcdir)/python_plugin_policy.c \
                          $(srcdir)/sudo_python_debug.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/python_plugin_policy.c > $@
 python_plugin_policy.plog: python_plugin_policy.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/python_plugin_policy.c --i-file python_plugin_policy.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/python_plugin_policy.c --i-file python_plugin_policy.i --output-file $@
 sudo_python_debug.lo: $(srcdir)/sudo_python_debug.c $(incdir)/compat/stdbool.h \
                       $(incdir)/sudo_compat.h $(incdir)/sudo_conf.h \
                       $(incdir)/sudo_debug.h $(incdir)/sudo_fatal.h \
@@ -497,7 +497,7 @@ sudo_python_debug.i: $(srcdir)/sudo_python_debug.c $(incdir)/compat/stdbool.h \
                       $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/sudo_python_debug.c > $@
 sudo_python_debug.plog: sudo_python_debug.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/sudo_python_debug.c --i-file sudo_python_debug.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/sudo_python_debug.c --i-file sudo_python_debug.i --output-file $@
 sudo_python_debug.o: $(srcdir)/sudo_python_debug.c $(incdir)/compat/stdbool.h \
                      $(incdir)/sudo_compat.h $(incdir)/sudo_conf.h \
                      $(incdir)/sudo_debug.h $(incdir)/sudo_fatal.h \
@@ -522,7 +522,7 @@ sudo_python_module.i: $(srcdir)/sudo_python_module.c \
                        $(srcdir)/sudo_python_module.h $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/sudo_python_module.c > $@
 sudo_python_module.plog: sudo_python_module.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/sudo_python_module.c --i-file sudo_python_module.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/sudo_python_module.c --i-file sudo_python_module.i --output-file $@
 testhelpers.o: $(srcdir)/regress/testhelpers.c $(incdir)/compat/stdbool.h \
                $(incdir)/sudo_compat.h $(incdir)/sudo_conf.h \
                $(incdir)/sudo_debug.h $(incdir)/sudo_plugin.h \
@@ -540,4 +540,4 @@ testhelpers.i: $(srcdir)/regress/testhelpers.c $(incdir)/compat/stdbool.h \
                $(top_builddir)/config.h
 	$(CPP) $(CPPFLAGS) $(srcdir)/regress/testhelpers.c > $@
 testhelpers.plog: testhelpers.i
-	rm -f $@; pvs-studio --cfg $(PVS_CFG) --sourcetree-root $(top_srcdir) --skip-cl-exe yes --source-file $(srcdir)/regress/testhelpers.c --i-file testhelpers.i --output-file $@
+	rm -f $@; pvs-studio --cfg $(PVS_CFG) --source-file $(srcdir)/regress/testhelpers.c --i-file testhelpers.i --output-file $@
