--- a/plugins/sample/Makefile.in
+++ b/plugins/sample/Makefile.in
@@ -79,7 +79,7 @@ SPLINT_OPTS = -D__restrict= -checks
 
 # PVS-studio options
 PVS_CFG = $(top_srcdir)/PVS-Studio.cfg
-PVS_IGNORE = 'V707,V011,V002,V536'
+PVS_IGNORE = 'V707,V011,V002,V536,V795'
 PVS_LOG_OPTS = -a 'GA:1,2' -e -t errorfile -d $(PVS_IGNORE)
 
 # Where to install things...
