--- a/docs/sudo_logsrvd.conf.man.in
+++ b/docs/sudo_logsrvd.conf.man.in
@@ -629,7 +629,7 @@ when the
 option is set), only the
 first character of the password will be replaced in the I/O log.
 The default value is
-\fItrue\fR.
+\fIfalse\fR.
 .TP 6n
 maxseq = number
 The maximum sequence number that will be substituted for the
@@ -1049,9 +1049,10 @@ Sudo log server configuration file
 # specified by iolog_mode.
 #iolog_mode = 0600
 
-# If disabled, sudo_logsrvd will attempt to avoid logging plaintext
+# By default, sudo_logsrvd will attempt to avoid logging plaintext
 # password in the terminal input using passprompt_regex.
-#log_passwords = true
+# If log_passwords is enabled, these checks are not performed.
+#log_passwords = false
 
 # The maximum sequence number that will be substituted for the "%{seq}"
 # escape in the I/O log file.  While the value substituted for "%{seq}"
