--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,7 @@ jobs:
       - checkout
       - run:
           name: "Building and packaging sudo (macOS)"
-          command: ./scripts/mkpkg --enable-warnings
+          command: ARCH_FLAGS= ./scripts/mkpkg --enable-warnings
       # Save workspace for subsequent jobs (i.e. test)
       - persist_to_workspace:
           root: .
