--- a/plugins/sudoers/Makefile.in
+++ b/plugins/sudoers/Makefile.in
@@ -507,7 +507,7 @@ $(devdir)/gram.stamp: $(srcdir)/gram.y prologue
 	    else \
 		gram_y="$(srcdir)/gram.y"; \
 	    fi; \
-	    cmd='$(YACC) -d -p sudoers '"$$gram_y"' && cp prologue $(devdir)/gram.c && $(SED) -e "s/^\\(#line .*\\) \"y\\.tab\\.c\"/\1 \"gram.c\"/" -e "/^# *include <limits.h>/{N;s/__STDC_VERSION__ && 199901 <= __STDC_VERSION__/HAVE_STDINT_H/;}" y.tab.c >> $(devdir)/gram.c && sed -e "s/^\\(#line .*\\) \"y\\.tab\\.h\"/\1 \"gram.h\"/" y.tab.h > $(devdir)/gram.h && rm -f y.tab.[ch]'; \
+	    cmd='mkdir -p gram && cd gram && $(YACC) -d -p sudoers '"$$(realpath "$$gram_y")"' && cd .. && cp prologue $(devdir)/gram.c && $(SED) -e "s/^\\(#line .*\\) \"y\\.tab\\.c\"/\1 \"gram.c\"/" -e "/^# *include <limits.h>/{N;s/__STDC_VERSION__ && 199901 <= __STDC_VERSION__/HAVE_STDINT_H/;}" gram/y.tab.c >> $(devdir)/gram.c && sed -e "s/^\\(#line .*\\) \"y\\.tab\\.h\"/\1 \"gram.h\"/" gram/y.tab.h > $(devdir)/gram.h && rm -rf gram/'; \
 	    echo "$$cmd"; eval $$cmd; \
 	fi
 	@mv -f $(devdir)/gram.tmp $@
@@ -531,7 +531,7 @@ $(devdir)/getdate.c: $(srcdir)/getdate.y prologue
 	    else \
 		getdate_y="$(srcdir)/getdate.y"; \
 	    fi; \
-	    cmd='$(YACC) '"$$getdate_y"' && cp prologue $(devdir)/getdate.c && $(SED) -e "s/^\\(#line .*\\) \"y\\.tab\\.c\"/\1 \"getdate.c\"/" -e "/^# *include <limits.h>/{N;s/__STDC_VERSION__ && 199901 <= __STDC_VERSION__/HAVE_STDINT_H/;}" y.tab.c >> $(devdir)/getdate.c && rm -f y.tab.c'; \
+	    cmd='mkdir -p getdate && cd getdate && $(YACC) '"$$(realpath "$$getdate_y")"' && cd .. && cp prologue $(devdir)/getdate.c && $(SED) -e "s/^\\(#line .*\\) \"y\\.tab\\.c\"/\1 \"getdate.c\"/" -e "/^# *include <limits.h>/{N;s/__STDC_VERSION__ && 199901 <= __STDC_VERSION__/HAVE_STDINT_H/;}" getdate/y.tab.c >> $(devdir)/getdate.c && rm -rf getdate/'; \
 	    echo "$$cmd"; eval $$cmd; \
 	fi
 
