configure: Add check for O_DIRECTORY definition in fcntl.h
This is needed by sudoedit to avoid a potential issue on systems
without O_DIRECTORY where the wrong version of the DIR_OPEN_FLAGS
macro could be used.

--- a/configure.ac
+++ b/configure.ac
@@ -3388,6 +3388,14 @@ AC_INCLUDES_DEFAULT
 ])
 
 dnl
+dnl Check for O_DIRECTORY declaration in fcntl.h
+dnl
+AC_CHECK_DECLS([O_DIRECTORY], [], [], [
+AC_INCLUDES_DEFAULT
+#include <fcntl.h>
+])
+
+dnl
 dnl Check for errno declaration in errno.h
 dnl
 AC_CHECK_DECLS([errno], [], [], [
