--- a/config.h.in
+++ b/config.h.in
@@ -168,6 +168,10 @@
    */
 #undef HAVE_DECL_NSIG
 
+/* Define to 1 if you have the declaration of 'O_DIRECTORY', and to 0 if you
+   don't. */
+#undef HAVE_DECL_O_DIRECTORY
+
 /* Define to 1 if you have the declaration of 'passwdexpiredx', and to 0 if
    you don't. */
 #undef HAVE_DECL_PASSWDEXPIREDX
