configure: Add check for O_NOFOLLOW definition in fcntl.h
This lets us use O_NOFOLLOW without having to check whether it is
defined first.  The sudoedit code needs to know whether O_NOFOLLOW
actually functions so use HAVE_DECL_O_NOFOLLOW there.

--- a/config.h.in
+++ b/config.h.in
@@ -172,6 +172,10 @@
    don't. */
 #undef HAVE_DECL_O_DIRECTORY
 
+/* Define to 1 if you have the declaration of 'O_NOFOLLOW', and to 0 if you
+   don't. */
+#undef HAVE_DECL_O_NOFOLLOW
+
 /* Define to 1 if you have the declaration of 'passwdexpiredx', and to 0 if
    you don't. */
 #undef HAVE_DECL_PASSWDEXPIREDX
